--- a/app/src/main/res/layout/activity_groupmember_memodetail.xml
+++ b/app/src/main/res/layout/activity_groupmember_memodetail.xml
@@ -30,7 +30,7 @@
     </com.google.android.material.appbar.MaterialToolbar>
 
 
-    <fragment
+    <RelativeLayout
         android:id="@+id/memoDetailPlaceMap"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="410dp"
