refact(#24): 네이밍 수정

--- a/app/src/main/res/layout/activity_non_group_fragment_three.xml
+++ b/app/src/main/res/layout/activity_non_group_fragment_three.xml
@@ -9,7 +9,7 @@
     >
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/non_group_imageView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
