--- a/app/src/main/res/layout/activity_non_group_fragment_two.xml
+++ b/app/src/main/res/layout/activity_non_group_fragment_two.xml
@@ -9,7 +9,7 @@
     >
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/non_group_imageView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
