--- a/app/src/main/res/layout/activity_non_group_fragment_one.xml
+++ b/app/src/main/res/layout/activity_non_group_fragment_one.xml
@@ -7,7 +7,7 @@
     tools:context="com.wisestudy.nongroup.activity.NonGruopActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/non_group_imageView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
