--- a/app/src/main/res/layout/activity_non_group_fragment_one.xml
+++ b/app/src/main/res/layout/activity_non_group_fragment_one.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.wisestudy.nongroup.activity.NonGruopActivity">
+    tools:context="com.wisestudy.nongroup.activity.NonGroupActivity">
 
     <ImageView
         android:id="@+id/non_group_imageView1"
