--- a/app/src/main/res/layout/activity_study_search_recycle_item.xml
+++ b/app/src/main/res/layout/activity_study_search_recycle_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parenthesis_open"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -38,68 +38,71 @@
             app:srcCompat="@drawable/kakao_default_profile_image" />
 
         <TextView
-            android:id="@+id/number_text"
+            android:id="@+id/description_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:layout_marginBottom="4dp"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/field_text"
-            app:layout_constraintStart_toStartOf="@+id/field_text"
-            app:layout_constraintTop_toBottomOf="@+id/field_text" />
-
-        <TextView
-            android:id="@+id/studyName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/non_group_study_name"
-            app:layout_constraintBottom_toTopOf="@+id/field"
-            app:layout_constraintEnd_toStartOf="@+id/study_name_text"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/studySearchImage" />
-
-        <TextView
-            android:id="@+id/field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="29dp"
-            android:layout_marginRight="29dp"
-            android:text="@string/non_group_study_field"
-            app:layout_constraintBottom_toTopOf="@+id/number"
-            app:layout_constraintEnd_toEndOf="@+id/studyName"
-            app:layout_constraintStart_toStartOf="@+id/studyName"
-            app:layout_constraintTop_toBottomOf="@+id/studyName" />
-
-        <TextView
-            android:id="@+id/number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/study_search_item_member"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/field"
-            app:layout_constraintStart_toStartOf="@+id/field"
-            app:layout_constraintTop_toBottomOf="@+id/field"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintEnd_toEndOf="@+id/number"
+            app:layout_constraintStart_toStartOf="@+id/number"
+            app:layout_constraintTop_toBottomOf="@+id/number" />
 
         <TextView
             android:id="@+id/study_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="79dp"
+            android:layout_marginRight="79dp"
             android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/field_text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/studyName"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/studySearchImage" />
 
         <TextView
-            android:id="@+id/field_text"
+            android:id="@+id/study_area_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
             android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/number_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/study_name_text"
+            app:layout_constraintTop_toBottomOf="@+id/studySearchImage" />
+
+        <TextView
+            android:id="@+id/number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:text="모집인원"
             app:layout_constraintEnd_toEndOf="@+id/study_name_text"
             app:layout_constraintStart_toStartOf="@+id/study_name_text"
             app:layout_constraintTop_toBottomOf="@+id/study_name_text" />
+
+        <TextView
+            android:id="@+id/number_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="41dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/number"
+            app:layout_constraintTop_toBottomOf="@+id/study_area_text" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
