--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorPoint">#0b005c</color>
     <color name="black">#ff000000</color>
+    <color name="Gray">#808080</color>
 </resources>
